kubernetes-experimentation/data-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-api
  name: data-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-api
  template:
    metadata:
      labels:
        app: data-api
    spec:
      containers:
      - image: registry.digitalocean.com/lamk/data-api:1.0.94
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        name: data-api
        ports:
        - containerPort: 80
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: data-api
spec:
  selector:
    app: data-api
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: data-api
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: api.lamk.work
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: data-api
            port:
              number: 80
